# smart_customer_segmentation

./: .env.example  .gitignore  Dockerfile  License  app.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  train.py  upload_data.py
config/: schema.yaml
data/processed/: clustered_data.csv
notebooks/: .gitignore
src/artifact/11_09_2025_15_29_46/data_ingestion/ingested/: test.csv  train.csv
src/artifact/11_09_2025_15_30_41/data_ingestion/ingested/: test.csv  train.csv
src/artifact/11_09_2025_15_40_36/data_ingestion/ingested/: test.csv  train.csv
src/artifact/11_09_2025_15_42_02/data_ingestion/ingested/: test.csv  train.csv
src/artifact/11_09_2025_15_42_02/data_validation/drift_report/: report.yaml
src/artifact/11_09_2025_15_48_56/data_ingestion/ingested/: test.csv  train.csv
src/cloud_storage/: b2_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py
src/configuration/: b2_connection.py
src/constant/: b2_bucket.py  database.py  env_variable.py
src/constant/prediction_pipeline/: __init__.py
src/constant/training_pipeline/: __init__.py
src/data_access/: customer_data.py
src/entity/: config_entity.py
src/ml/model/: b2_estimator.py  model_storage.py
src/pipeline/: prediction_pipeline.py  train_pipeline.py
src/storage/: local_storage.py
src/utils/: main_utils.py
